fix: navbar color changes smoothly with dark mode and rest of page

--- a/quartz/components/styles/navbar.scss
+++ b/quartz/components/styles/navbar.scss
@@ -206,6 +206,7 @@
   display: flex;
   flex-direction: column;
   position: relative;
+  background-color: var(--background);
 
   @media all and (max-width: $max-mobile-width) {
     justify-content: space-between;
