--- a/quartz/styles/custom.scss
+++ b/quartz/styles/custom.scss
@@ -293,7 +293,8 @@ sup {
 .temporary-transition *::-webkit-scrollbar,
 .temporary-transition *::-webkit-media-controls,
 .temporary-transition *::-webkit-media-controls-play-button,
-.temporary-transition *::-webkit-media-controls-panel {
+.temporary-transition *::-webkit-media-controls-panel,
+.temporary-transition #left-sidebar {
   transition:
     background-color 1s ease-in-out,
     border-color 1s ease-in-out,
